--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>Vite App</title>
+  <script>
+    // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+    if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+    } else {
+        document.documentElement.classList.remove('dark')
+    }
+</script>
 </head>
 
-<body>
-  <div class="flex-grow">
+<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
     <nav
-      class="bg-white border-gray-200 rounded dark:bg-gray-900 dark:border-gray-700 shadow bg-opacity-50 dark:bg-opacity-50">
+      class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="/" class="flex items-center">
           <img src="./assets/logo-02.svg" class="h-8 mr-3 rounded" alt="Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LIMC</span>
+          <button id="theme-toggle" type="button" class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+            <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+            <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+          </button>
         </a>
         <button data-collapse-toggle="navbar-dropdown" type="button"
-          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-xl md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
           aria-controls="navbar-dropdown" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -31,7 +42,7 @@
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
           <ul
-            class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
+            class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
             <li>
               <a href="#"
                 class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
@@ -48,7 +59,7 @@
                 </svg></button>
               <!-- Dropdown menu -->
               <div id="dropdownNavbar"
-                class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-xl shadow w-44 dark:bg-darkprimary-50 dark:divide-gray-600">
                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                   <li>
                     <a href="#"
@@ -103,7 +114,7 @@
       </p>
       <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
         <a href="/#signup"
-          class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+          class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Sign Up
           <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -112,7 +123,7 @@
           </svg>
         </a>
         <a href="#"
-          class="hover:scale-110 transition-all inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+          class="hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border-2 border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
           <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z">
@@ -123,10 +134,10 @@
       </div>
     </div>
 
-    <section id="Welcome" class="bg-white dark:bg-gray-900 dark:bg-opacity-75 rounded-lg shadow m-4 bg-opacity-25">
-      <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+    <section data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="Welcome" class=" max-w-screen-xl xl:mx-auto m-4 bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50">
+      <div class="items-center py-8 px-4 text-center lg:py-16 lg:px-12">
         <a href="#"
-          class="border-2 inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700"
+          class="border-2 dark:border-gray-500 inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700"
           role="alert">
           <span class="text-gray-900 text-xs bg-primary-600 rounded-full dark:text-white px-4 py-1.5 mr-3">New</span>
           <span class="text-sm font-medium">LIMC 2023 Registration is Out!</span>
@@ -147,12 +158,12 @@
           Masterful Skills, Competitive Spirit, and Achievement.</p>
         <div
           class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-          <!-- <a href="#" class="text-gray-900 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center dark:text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+          <!-- <a href="#" class="text-gray-900 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center dark:text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                     Learn more
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 </a> -->
           <a href="#"
-            class=" transition-all duration-500 hover:scale-110 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+            class=" transition-all duration-500 hover:scale-110 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
             Learn more
           </a>
         </div>
@@ -169,8 +180,15 @@
       </div>
     </section>
 
-    <div class="flex md:flex-row flex-col">
-      <form class="bg-white dark:bg-gray-900 dark:bg-opacity-75 rounded-lg shadow m-4 bg-opacity-25 p-20" id="myForm">
+    <div class="max-w-screen-xl m-4 xl:mx-auto w-full ">
+      <div class="col-1 d-flex flex-column flex-items-center position-relative">
+        <div class="home-campaign-git-line height-full rounded js-build-in-item build-in-scale-top build-in-animate" style="background: linear-gradient(#abb4ff, #797ef9, var(--color-canvas-default)); transition-delay: 500ms;" data-build-delay="500"></div>
+        <img alt="" aria-hidden="true" width="81" height="485" style="left: calc(50% - 2px); height: auto; max-width: 9vw; transition-delay: 100ms;" class="d-none d-md-block position-absolute bottom-4 js-build-in-item build-in-scale-fade build-in-animate" loading="lazy" decoding="async" src="https://github.githubassets.com/images/modules/site/home-campaign/git-branch-productivity.svg">
+      </div>
+    </div>
+
+    <div class="flex md:flex-row flex-col ">
+      <form class="bg-white dark:bg-darkprimary-100 rounded-xl shadow m-4 p-20 border dark:border-darkprimary-50" data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
         <div>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Sign up</h2>
           <p class="text-gray-600 dark:text-gray-400 pb-5">
@@ -189,7 +207,7 @@
           <label for="schools" class="block mb-2 ext-sm font-small text-gray-500 text-sm dark:text-gray-400">Select your
             School</label>
           <select id="schools" name="dropdown_schools"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-xl focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
             <option>None</option>
             <option>School One</option>
             <option>School Two</option>
@@ -226,7 +244,7 @@
           <label for="section" class="block mb-2 ext-sm font-small text-gray-500 text-sm dark:text-gray-400">Select your
             Section</label>
           <select id="section" name="dropdown_section"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-xl focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
             <option>LIMC 9</option>
             <option>LIMC 10</option>
             <option>LIMC 11</option>
@@ -234,15 +252,15 @@
           </select>
         </div>
         <button type="submit"
-          class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Submit</button>
+          class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Submit</button>
       </form>
       <div
-        class="flex flex-col bg-white dark:bg-gray-900 dark:bg-opacity-75 rounded-lg shadow m-4 bg-opacity-25 p-10 md:p-20 grow">
+        class="flex flex-col bg-white dark:bg-darkprimary-100 rounded-xl border dark:border-darkprimary-50 shadow m-4 p-10 md:p-20 grow">
         <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white ">American School of Barcelona
         </h2>
         <p class="text-gray-600 dark:text-gray-400 pb-5">Carrer de la Creu Coberta, 1, 08002 Barcelona, Spain</p>
-        <div class="flex-grow rounded-lg shadow">
-          <iframe class="rounded-lg shadow w-full h-full"
+        <div class="flex-grow rounded-xl shadow">
+          <iframe class="rounded-xl shadow w-full h-full"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.5479569694908!2d2.081859076712353!3d41.38390499621011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4999f99b49f61%3A0x5ec4bd1415edda09!2sAmerican%20School%20of%20Barcelona%20(ASB)!5e0!3m2!1sen!2ses!4v1681649010923!5m2!1sen!2ses"
             style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -252,7 +270,7 @@
     <!-- Modal toggle -->
     <!-- <div class="flex justify-center m-5">
       <button id="successButton" data-modal-toggle="successModal"
-        class="block text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+        class="block text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
         type="button">
         Show success message
       </button>
@@ -263,9 +281,9 @@
       class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-modal md:h-full">
       <div class="relative p-4 w-full max-w-md h-full md:h-auto">
         <!-- Modal content -->
-        <div class="relative p-4 text-center bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
+        <div class="relative p-4 text-center bg-white rounded-xl shadow dark:bg-gray-800 sm:p-5">
           <button type="button"
-            class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+            class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-xl text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
             data-modal-toggle="successModal">
             <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
               xmlns="http://www.w3.org/2000/svg">
@@ -287,14 +305,14 @@
           </div>
           <p class="mb-4 text-lg font-semibold text-gray-900 dark:text-white">Thank You for signing up</p>
           <button data-modal-toggle="successModal" type="button"
-            class="py-2 px-3 text-sm font-medium text-center text-white rounded-lg bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
+            class="py-2 px-3 text-sm font-medium text-center text-white rounded-xl bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:focus:ring-primary-900">
             Continue
           </button>
         </div>
       </div>
     </div>
 
-    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+    <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
       <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between margin-top: auto;">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Lynx International Mathematics
           Competition<a href="https://flowbite.com/" class="hover:underline"></a>
@@ -315,11 +333,11 @@
         </ul>
       </div>
     </footer>
-  </div>
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
   <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
   <script src="script.js"></script>
+  <script src="vanilla-tilt.js"></script>
 </body>
 
 </html>
