--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
       </div>
     </div>
 
-    <section data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="Welcome" class=" max-w-screen-xl xl:mx-auto m-4 bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50">
+    <section data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="Welcome" class="group overflow-hidden max-w-screen-xl xl:mx-auto m-4 bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50">
+      <div id="blur-div-1" class="origin-center z-0 absolute inset-0 w-[640px] h-[640px] bg-blue-800 filter rounded-full opacity-0 group-hover:opacity-25 transition-opacity duration-500"></div>
+
       <div class="items-center py-8 px-4 text-center lg:py-16 lg:px-12">
         <a href="#"
           class="border-2 dark:border-gray-500 inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700"
@@ -189,7 +191,7 @@
 
     <div class="flex md:flex-row flex-col relative">
       <form class=" bg-white dark:bg-darkprimary-100 group overflow-hidden rounded-xl shadow m-4 p-20 border dark:border-darkprimary-50" data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
-        <div id="blur-div" class="origin-center z-0 absolute inset-0 w-[640x] h-[640px] bg-green-400 filter blur-[120px] rounded-full opacity-0 group-hover:opacity-25 transition-opacity duration-500"></div>
+        <div id="blur-div-2" class="origin-center z-0 absolute inset-0 w-[640px] h-[640px] bg-blue-800 filter blur-[120px] rounded-full opacity-0 group-hover:opacity-25 transition-opacity duration-500"></div>
         
         <div class="relative">
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Sign up</h2>
