--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
     </footer>
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
-  <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
-  <script src="script.js"></script>
-  <script src="vanilla-tilt.js"></script>
+  <script src="/node_modules/flowbite/dist/flowbite.min.js" type="module"></script>
+  <script src="script.js" type="module"></script>
+  <script src="vanilla-tilt.js" type="module"></script>
 </body>
 
 </html>
