Adding Moduel to external scripts

--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
 
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
-  <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
-  <script src="script.js"></script>
-  <script src="vanilla-tilt.js"></script>
+  <script type="module" src="/node_modules/flowbite/dist/flowbite.min.js"></script>
+  <script type="module" src="script.js"></script>
+  <script type="module" src="vanilla-tilt.js"></script>
 </body>
 
 </html>
