--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </section> -->
 
     <section class="flex md:flex-row flex-col  max-w-screen-xl xl:mx-auto mx-4 gap-4 xl:w-full">
-      <form class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
+      <form style="overflow-clip-margin: 1px;" class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
         <div id="blur-div-2" class="z-10 dark:mix-blend-soft-light mix-blend-darken pointer-events-none absolute left-[-320px] top-[-320px] inset-0 w-[640px] h-[640px] opacity-0 group-hover:opacity-50 dark:group-hover:opacity-[85] blur-[120px] bg-primary-300 rounded-full transition-opacity duration-500"></div>
         
         <div class="relative">
@@ -239,7 +239,7 @@
           class="relative text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Submit</button>
       </form>
       
-      <div id="map" class="group flex flex-col bg-white dark:bg-darkprimary-100 overflow-hidden relative rounded-xl border dark:border-darkprimary-50 shadow p-10 md:p-20 grow " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1">
+      <div id="map" style="overflow-clip-margin: 1px;" class="group flex flex-col bg-white dark:bg-darkprimary-100 overflow-clip relative rounded-xl border dark:border-darkprimary-50 shadow p-10 md:p-20 grow " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1">
         <div id="blur-div-3" class="z-10 dark:mix-blend-soft-light mix-blend-darken pointer-events-none absolute left-[-320px] top-[-320px] inset-0 w-[640px] h-[640px] opacity-0 group-hover:opacity-50 dark:group-hover:opacity-[85] blur-[120px] bg-primary-300 rounded-full transition-opacity duration-500"></div>
 
         <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white ">American School of Barcelona
