--- a/index.html
+++ b/index.html
@@ -44,54 +44,21 @@
           <ul
             class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
             <li>
-              <a href="#"
+              <a href="/"
                 class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
                 aria-current="page">Home</a>
             </li>
-            <li>
-              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
-                class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 md:w-auto dark:text-white md:dark:hover:text-primary-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Competitions
-                <svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                    clip-rule="evenodd"></path>
-                </svg></button>
-              <!-- Dropdown menu -->
-              <div id="dropdownNavbar"
-                class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-xl shadow w-44 dark:bg-darkprimary-50 dark:divide-gray-600">
-                <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
-                  <li>
-                    <a href="#"
-                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Freshman</a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sophomore
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Junior</a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Senior</a>
-                  </li>
-                </ul>
-              </div>
-            </li>
+
             <li>
               <a href="#"
-                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
-                Us</a>
+                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About Us</a>
             </li>
             <li>
               <a href="#"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="#"
+              <a href="regulations.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Regulations</a>
             </li>
           </ul>
@@ -113,7 +80,7 @@
         Sign up for your next math aventure now!
       </p>
       <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-        <a href="/#signup"
+        <a href="/#myForm"
           class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Sign Up
           <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -138,10 +105,10 @@
         class="mb-4 pointer-events-auto group overflow-clip max-w-screen-xl xl:mx-auto mx-4 bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50">
 
       <div class="items-center py-8 px-4 text-center lg:py-16 lg:px-12">
-        <a href="#"
+        <a href="#myForm"
           class="border-2 dark:border-gray-500 inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm text-gray-700 bg-gray-100 rounded-full dark:bg-gray-800 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700"
           role="alert">
-          <span class="text-gray-900 text-xs bg-primary-600 rounded-full dark:text-white px-4 py-1.5 mr-3">New</span>
+          <span class="text-gray-900 text-xs bg-primary-500 rounded-full dark:text-white px-4 py-1.5 mr-3">New</span>
           <span class="text-sm font-medium">LIMC 2023 Registration is Out!</span>
           <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -191,7 +158,7 @@
     </section> -->
 
     <section class="flex md:flex-row flex-col  max-w-screen-xl xl:mx-auto mx-4 gap-4 xl:w-full">
-      <form style="overflow-clip-margin: 1px;" class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
+      <form  style="overflow-clip-margin: 1px;" class=" dark:bg-darkprimary-100 group overflow-clip rounded-xl p-20 bg-white shadow border dark:border-darkprimary-50 " data-tilt data-tilt-perspective="700" data-tilt-speed="1000" data-tilt-transition="true" data-tilt-max="1" id="myForm">
         <div id="blur-div-2" class="z-10 dark:mix-blend-soft-light mix-blend-darken pointer-events-none absolute left-[-320px] top-[-320px] inset-0 w-[640px] h-[640px] opacity-0 group-hover:opacity-50 dark:group-hover:opacity-[85] blur-[120px] bg-primary-300 rounded-full transition-opacity duration-500"></div>
         
         <div class="relative">
@@ -326,6 +293,8 @@
     <script type="module" src="/main.js"></script> -->
   <script type="module" src="/node_modules/flowbite/dist/flowbite.min.js"></script>
   <script type="module" src="script.js"></script>
+  <script type="module" src="frontpage.js"></script>
+  <script type="module" src="morph.js"></script>
   <script type="module" src="vanilla-tilt.js"></script>
 </body>
 
