--- a/404/index.html
+++ b/404/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Vite App</title>
+  <link rel="stylesheet" href="../style.css" />
+  <title>404</title>
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -17,12 +17,12 @@
 </script>
 </head>
 
-<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
+<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex flex-col h-screen justify-between">
     <nav
       class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a class="flex items-center">
-          <img src="./assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
+          <img src="../assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">LIMC</span>
           <button id="theme-toggle" type="button" class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
             <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
@@ -58,7 +58,7 @@
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="regulations.html"
+              <a href="/regulations/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Regulations</a>
             </li>
           </ul>
@@ -66,7 +66,21 @@
       </div>
     </nav>
 
-    
+    <!-- 404 Secction -->
+
+    <section>
+        <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+            <div class="mx-auto max-w-screen-sm text-center">
+                <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600 dark:text-primary-500">404</h1>
+                <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">Oops, we tried to divide by zero.</p>
+                <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, we can't find that page. It's like trying to divide by zero, it just doesn't work. You'll find lots to explore on the home page. </p>
+                <a href="/" 
+                class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+                Back to Homepage
+                </a>
+            </div>   
+        </div>
+    </section>
 
 
 
@@ -92,18 +106,12 @@
       </div>
     </footer>
 
-    <button id="successButton" data-modal-toggle="successModal"
-      class="block text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-xl text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-      type="button" style="display: none; pointer-events: none;">
-      Show success message
-    </button>
-
 
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
-  <script type="module" src="/node_modules/flowbite/dist/flowbite.min.js"></script>
-  <script type="module" src="script.js"></script>
-  <script type="module" src="vanilla-tilt.js"></script>
+  <script type="module" src="../node_modules/flowbite/dist/flowbite.min.js"></script>
+  <script type="module" src="../script.js"></script>
+  <script type="module" src="../vanilla-tilt.js"></script>
 </body>
 
 </html>
