--- a/404.html
+++ b/404.html
@@ -108,9 +108,9 @@
 
   <!-- <div id="app"></div>
     <script type="module" src="/main.js"></script> -->
-    <script type="module" src="../node_modules/flowbite/dist/flowbite.min.js"></script>
-    <script type="module" src="../script.js"></script>
-    <script type="module" src="../vanilla-tilt.js"></script>
+    <script type="module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./vanilla-tilt.js"></script>
 </body>
 
 </html>
