Footer Update + Updating Time Sheet

--- a/index.html
+++ b/index.html
@@ -270,13 +270,10 @@
             <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
           </li>
           <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+            <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
           </li>
           <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-          </li>
-          <li>
-            <a href="#" class="hover:underline">Contact</a>
+            <a href="/schedule/" class="hover:underline">Schedule</a>
           </li>
         </ul>
       </div>
