--- a/schedule/index.html
+++ b/schedule/index.html
@@ -77,7 +77,7 @@
 
 
   <section>
-    <div class="py-8 mx-auto max-w-screen-xl lg:py-16 ">
+    <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Day Schedule
         </h2>
@@ -93,6 +93,15 @@
         <div class="-my-4 divide-y divide-gray-200 dark:divide-gray-700">
           <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
             <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+              09:00 - 10:00
+            </p>
+            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+              <a href="#" class="hover:underline">Arrival and Welcome</a>
+            </h3>
+          </div>
+          
+          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
               10:00 - 10:30
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
@@ -105,7 +114,7 @@
               10:30 - 10:45
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Transition to first individual contest</a>
+              <a href="#" class="hover:underline">Transition to First Individual Contest</a>
             </h3>
           </div>
 
@@ -114,7 +123,7 @@
               10:45 - 11:45
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Round 1 individual</a>
+              <a href="#" class="hover:underline">Round 1 Individual</a>
             </h3>
           </div>
 
@@ -132,7 +141,7 @@
               12:15 - 13:15
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Round 2 Team round</a>
+              <a href="#" class="hover:underline">Round 2 Team Round</a>
             </h3>
           </div>
 
@@ -141,7 +150,7 @@
               13:15 - 14:15
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Lunch (Meal and drinks)</a>
+              <a href="#" class="hover:underline">Lunch (Meal and Drinks)</a>
             </h3>
           </div>
 
@@ -168,7 +177,7 @@
               15:15 - 16:00
             </p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Close ceremony and awards</a>
+              <a href="#" class="hover:underline">Close Ceremony and Awards</a>
             </h3>
           </div>
         </div>
@@ -190,13 +199,10 @@
           <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
         </li>
         <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
         </li>
         <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline">Contact</a>
+          <a href="/schedule/" class="hover:underline">Schedule</a>
         </li>
       </ul>
     </div>
