Optimised Hard Coded JS Glow Effect + Adding blank About, and Contacts pages to project

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../style.css" />
-  <title>Schedule</title>
+  <title>About</title>
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -79,7 +79,7 @@
   <section>
     <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Competition Day Schedule
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">About Us
         </h2>
         <p class="mb-4 font-light">On competition day we will follow this schedule for LMIC 10</p>
         <a href="../#myForm" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
@@ -90,107 +90,6 @@
     </div>
   </section>
 
-  <section style="overflow-clip-margin: 1px;" data-tilt data-tilt-perspective="700" data-tilt-speed="1000"
-    data-tilt-transition="true" data-tilt-max="1" id="Welcome"
-    class="antialiased mb-4 pointer-events-auto group overflow-clip  bg-white dark:bg-darkprimary-100 rounded-xl shadow border dark:border-darkprimary-50 flex md:flex-row flex-col  max-w-screen-xl xl:mx-auto mx-4 gap-4 xl:w-full">
-      <div class="flow-root py-8 px-4 max-w-screen-xl lg:py-6 lg:px-6">
-        <div class="-my-4 divide-y divide-gray-200 dark:divide-gray-700">
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              09:00 - 10:00
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Arrival and Welcome</a>
-            </h3>
-          </div>
-          
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              10:00 - 10:30
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Opening Ceremony</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              10:30 - 10:45
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Transition to First Individual Contest</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              10:45 - 11:45
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Round 1 Individual</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              11:45 - 12:15
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Break (Snacks)</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              12:15 - 13:15
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Round 2 Team Round</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              13:15 - 14:15
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Lunch (Meal and Drinks)</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              14:15 - 15:00
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Round 3</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              15:00 - 15:15
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Transitioning to the close ceremony</a>
-            </h3>
-          </div>
-
-          <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
-            <p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
-              15:15 - 16:00
-            </p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-              <a href="#" class="hover:underline">Close Ceremony and Awards</a>
-            </h3>
-          </div>
-        </div>
-      </div>
-
-      <div id="blur-div-1" class="z-10 dark:mix-blend-soft-light mix-blend-darken pointer-events-none absolute left-[-320px] top-[-320px] inset-0 w-[640px] h-[640px] opacity-0 group-hover:opacity-50 dark:group-hover:opacity-[85] blur-[120px] bg-primary-300 rounded-full transition-opacity duration-500"></div>
-
-
-    </section>
 
 
   <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
@@ -211,7 +110,6 @@
       </ul>
     </div>
   </footer>
-
 
 
   <!-- <div id="app"></div>
