--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             </li>
 
             <li>
-              <a href="#"
+              <a href="/about/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About Us</a>
             </li>
             <li>
-              <a href="#"
+              <a href="/contact/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="./schedule/"
+              <a href="/schedule/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
             </li>
           </ul>
@@ -89,13 +89,30 @@
               clip-rule="evenodd"></path>
           </svg>
         </a>
-        <a href="#"
+        <a href="./schedule/"
           class="hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border-2 border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-          <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          
+          
+          <!-- <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z">
             </path>
+          </svg> -->
+
+
+          <svg class="mr-2 -ml-1 w-4 h-4" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: currentColor;
+                }
+              </style>
+            </defs>
+            <path class="cls-1" d="m0,463.19c0,.81.02,1.62.06,2.43,1.31,25.84,22.68,46.38,48.85,46.38h414.18c26.17,0,47.54-20.54,48.85-46.38.04-.81.06-1.62.06-2.43V192.95H0v270.24Z"/>
+            <path class="cls-1" d="m511.94,78.49c-1.31-25.84-22.68-46.39-48.85-46.39h-46.94v-15c0-9.39-7.61-17-17-17s-17,7.61-17,17v14.9h-252.3v-15c0-9.39-7.61-17-17-17s-17,7.61-17,17v15h-46.94C22.71,32,1.32,52.61.06,78.49c-.04.84-.06,1.68-.06,2.52v79.85h512v-79.85c0-.84-.02-1.68-.06-2.52Zm-382.09,33.42c0,9.39-7.61,17-17,17s-17-7.61-17-17v-30c0-9.39,7.61-17,17-17s17,7.61,17,17v30Zm286.3.1c0,9.39-7.61,17-17,17s-17-7.61-17-17v-30c0-9.39,7.61-17,17-17s17,7.61,17,17v30Z"/>
           </svg>
+
+
           More Info
         </a>
       </div>
