--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@
 </head>
 
 <body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex flex-col h-screen justify-between">
-      <nav
-      class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl">
+    <nav
+      class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl ">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a class="flex items-center">
           <img src="./assets/logo_n.svg" class="h-8 mr-3 rounded" alt="Logo" />
@@ -44,17 +44,17 @@
           <ul
             class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-xl bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-darkprimary-100 md:dark:bg-transparent dark:border-gray-700">
             <li>
-            <a href="../"
+              <a href="../"
                 class="block py-2 pl-3 pr-4 text-white bg-primary-700 rounded md:bg-transparent md:text-primary-500 md:p-0 md:dark:text-primary-500 dark:bg-primary-600 md:dark:bg-transparent"
                 aria-current="page">Home</a>
             </li>
 
             <li>
-              <a href="#"
+              <a href="/about/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About Us</a>
             </li>
             <li>
-              <a href="#"
+              <a href="/contact/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
@@ -64,7 +64,7 @@
           </ul>
         </div>
       </div>
-      </nav>
+    </nav>
     <!-- 404 Secction -->
 
     <section>
