Making Footer Stick

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col">
+<body class="flex-grow bg-gray-100 dark:bg-darkprimary-200 flex justify-center flex-col min-h-screen">
   <nav class="bg-white dark:bg-darkprimary-100 border-gray-200 dark:border-darkprimary-50 border-b shadow-xl">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a class="flex items-center">
@@ -193,7 +193,7 @@
     </section>
 
 
-  <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
+  <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800 mt-auto">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between margin-top: auto;">
       <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Lynx International Mathematics
         Competition<a href="https://flowbite.com/" class="hover:underline"></a>
