Updating Schedual + extra info filler

--- a/contact/index.html
+++ b/contact/index.html
@@ -69,8 +69,8 @@
               class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
           <li>
-            <a href="/schedule/"
-              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
+            <a href="/details/"
+              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Details</a>
           </li>
         </ul>
       </div>
@@ -83,7 +83,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Contacts
         </h2>
-        <p class="mb-4 font-light">On competition day we will follow this schedule for LMIC 10</p>
+        <p class="mb-4 font-light">On competition day we will follow this details for LMIC 10</p>
         <a href="../#myForm" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
           Sign Up
           <svg class="ml-1 w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
@@ -107,7 +107,7 @@
           <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
         </li>
         <li>
-          <a href="/schedule/" class="hover:underline">Schedule</a>
+          <a href="/details/" class="hover:underline">Details</a>
         </li>
       </ul>
     </div>
