--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
-              <a href="/schedule/"
-                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Schedule</a>
+              <a href="/details/"
+                class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Details</a>
             </li>
           </ul>
         </div>
@@ -91,7 +91,7 @@
               clip-rule="evenodd"></path>
           </svg>
         </a>
-        <a href="./schedule/"
+        <a href="./details/"
           class="hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-xl border-2 border-gray-300 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
           
           
@@ -292,7 +292,7 @@
             <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
           </li>
           <li>
-            <a href="/schedule/" class="hover:underline">Schedule</a>
+            <a href="/details/" class="hover:underline">Details</a>
           </li>
         </ul>
       </div>
