--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About Us</a>
             </li>
             <li>
-              <a href="/contact/"
+              <a href="/about/"
                 class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
             </li>
             <li>
@@ -85,17 +85,17 @@
 
 
 
-    <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800">
+    <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800 mt-auto">
       <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between margin-top: auto;">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Lynx International Mathematics
           Competition<a href="https://flowbite.com/" class="hover:underline"></a>
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
           <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+            <a href="/about/" class="mr-4 hover:underline md:mr-6 ">About</a>
           </li>
           <li>
-            <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
+            <a href="/about/" class="mr-4 hover:underline md:mr-6">Contact</a>
           </li>
           <li>
             <a href="/details/" class="hover:underline">Details</a>
