--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
               Us</a>
           </li>
           <li>
-            <a href="/contact/"
+            <a href="/about/"
               class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
           <li>
@@ -81,17 +81,57 @@
   <section>
     <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">About Us
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">About Us/Who Are We?
         </h2>
-        <p class="mb-4 font-light">On competition day we will follow this details for LMIC 10</p>
-        <a href="../#myForm" class="inline-flex items-center font-medium text-primary-600 hover:text-primary-800 dark:text-primary-500 dark:hover:text-primary-700">
-          Sign Up
-          <svg class="ml-1 w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-        </a>
+        <p class="mb-4 font-light">Our main goals of this competition are to recognize excellence and skill, stimulate curiosity, and above all, inspire students to enjoy and embrace mathematics. We are not only offering you our unique and engaging questions, but also inviting you to take advantage of the chance to work together with other talented students and cultivate a deeper understanding of mathematical concepts in a supportive and collaborative environment.
+        </p>
       </div>
     </div>
   </section>
 
+  <section>
+    <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl lg:py-16 ">
+      <div class="max-w-screen-lg text-gray-900 sm:text-lg dark:text-gray-400">
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Contacts
+        </h2>
+        <!-- <p class="mb-4 font-light">Our main goals of this competition are to recognize excellence and skill, stimulate curiosity, and above all, inspire students to enjoy and embrace mathematics. We are not only offering you our unique and engaging questions, but also inviting you to take advantage of the chance to work together with other talented students and cultivate a deeper understanding of mathematical concepts in a supportive and collaborative environment.
+        </p> -->
+      
+      <div class="pb-6">
+          <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
+              <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"></path><path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"></path></svg>                    
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Carlos Han</h3>
+          <p class="text-gray-500 dark:text-gray-400">Competition Organizer - kuhan@asbarcelona.com</p>
+      </div>
+      <div class="pb-6">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
+              <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path></svg>
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Sum Yin Zhang</h3>
+          <p class="text-gray-500 dark:text-gray-400">Technology Advisor - suzhang@asbarcelona.com</p>
+
+      </div>
+      
+      <div class="pb-6">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
+            <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"></path></svg>
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">Mr. Steven Gnagni</h3>
+        <p class="text-gray-500 dark:text-gray-400">Teacher Supervisor - sgnagni@asbarcelona.com</p>
+      </div>
+
+      <div class="pb-6">
+        <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
+              <svg class="w-5 h-5 text-primary-600 lg:w-6 lg:h-6 dark:text-primary-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"></path></svg>
+          </div>
+          <h3 class="mb-2 text-xl font-bold dark:text-white">Miss Stephanie Cates</h3>
+          <p class="text-gray-500 dark:text-gray-400">Teacher Supervisor - scates@asbarcelona.com</p>
+      </div>
+
+      </div>
+    </div>
+  </section>
 
 
   <footer class="bg-white rounded-xl shadow m-4 dark:bg-gray-800 mt-auto">
@@ -101,10 +141,10 @@
       </span>
       <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+          <a href="/about/" class="mr-4 hover:underline md:mr-6 ">About</a>
         </li>
         <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Contact</a>
+          <a href="/about/" class="mr-4 hover:underline md:mr-6">Contact</a>
         </li>
         <li>
           <a href="/details/" class="hover:underline">Details</a>
