Adding Past Contests Empty Page + Allowed materials

--- a/details/index.html
+++ b/details/index.html
@@ -72,6 +72,10 @@
             <a href="/details/"
               class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Details</a>
           </li>
+          <li>
+            <a href="/past/"
+              class="block py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-500 md:p-0 dark:text-white md:dark:hover:text-primary-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Past Contests</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -199,6 +203,32 @@
       </div>
 
 
+    </section>
+
+
+    <section>
+      <div class="mx-4 py-8 xl:mx-auto max-w-screen-xl ">
+        <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
+          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Permitted Utensils
+          </h2>
+          <h3 class="text-2xl tracking-tight font-extrabold text-gray-900 dark:text-white mb-2">Allowed</h3>
+            <ul class="mb-4 font-light">
+              <li>The materials that students are allowed to have during the competition are the following:</li>
+              <li>Pen/Pencils</li>
+              <li>Erasers</li>
+              <li>Rulers</li>
+              <li>Highlighters</li>
+              <li>Scratch Paper</li>
+            </ul>
+          <h3 class="text-2xl tracking-tight font-extrabold text-gray-900 dark:text-white mb-2">Prohibited</h3>
+            <ul class="mb-4 font-light">
+              <li>No calculators or phones and similar electronic devices of any kind are allowed. No questions require the use of a calculator.</li>
+              <li>Smart Watches</li>
+              <li>Mobile Phone</li>
+            </ul>
+          
+        </div>
+      </div>
     </section>
 
 
