Update the About Us Page

--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">About Us/Who Are We?
         </h2>
-        <p class="mb-4 font-light">Our main goals of this competition are to recognize excellence and skill, stimulate curiosity, and above all, inspire students to enjoy and embrace mathematics. We are not only offering you our unique and engaging questions, but also inviting you to take advantage of the chance to work together with other talented students and cultivate a deeper understanding of mathematical concepts in a supportive and collaborative environment.
+        <p class="mb-4 font-light">We are a group of math enthusiasts who want to share our love of mathematics to all. Our main goals of this competition are to recognize excellence, stimulate curiosity, and above all, inspire students to enjoy and embrace mathematics. By organizing this competition, we are both offering you our unique and engaging questions and inviting you to take advantage of the chance to workingwith other talented students. We hope this process cultivates a deeper understanding of mathematical concepts for students and creates a  supportive environment.
         </p>
       </div>
     </div>
