Minor Text Changes
Fixing text error on front page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">Sign up</h2>
         <br>
         <p class="text-gray-600 dark:text-gray-400 pb-5">
-          Having trouble signing up? <a href="/about/" class="text-primary-500">Constact Us</a>
+          Having trouble signing up? <a href="/about/" class="text-primary-500">Contact Us</a>
         </p>
         <p class="text-gray-600 dark:text-gray-400 pb-5">
           Make sure to read the details page before signing up <a href="/details/" class="text-primary-500">Details</a>
