--- a/past/index.html
+++ b/past/index.html
@@ -87,7 +87,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Contests
         </h2>
-        <p class="mb-4 font-light">Currently None Avalible
+        <p class="mb-4 font-light">Currently None Avalible. We'll publish our contests immediately after the competition.
         </p>
       </div>
     </div>
@@ -97,8 +97,8 @@
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="mx-auto max-w-screen-sm text-center">
             <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600 dark:text-primary-500">423</h1>
-            <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">Oops, not ready to be shown yet.</p>
-            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, we can't show you this yet. It's like looking for the last digit of Pi. You'll find lots to explore on the home page. </p>
+            <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">We'll publish our contests immediately after the competition</p>
+            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, we can't show you this yet.  It's like looking for the last digit of Pi. You'll find lots to explore on the home page. </p>
             <a href="/" 
             class="bg-gradient-to-tr from-primary-500 to-primary-600 hover:scale-110 transition-all duration-500 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-xl bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
             Back to Homepage
