--- a/past/index.html
+++ b/past/index.html
@@ -87,7 +87,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Past Contests - 2024
         </h2>
-        <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1dfzlmhQbIz4ngUyhALthV9CnZpAdH16U/view?usp=sharing">2024 Indivisual Contest PDF
+        <a class="mb text-2xl font-light text-indigo-600" href="https://drive.google.com/file/d/1dfzlmhQbIz4ngUyhALthV9CnZpAdH16U/view?usp=sharing">2024 Individual Contest PDF
         </a>
         <a>*Quesion 7 is excluded due to confusion.</a>
         <!-- <p class="mb-4 font-light">We'll publish our contests immediately after the competition.
